# tiltak

./: .gitignore  Cargo.toml  Dockerfile  README.md  job.yaml
.github/workflows/: actions.yml
src/: aws.rs  bitboard.rs  board.rs  check_playtak_db.rs  lib.rs  main.rs  mcts.rs  minmax.rs  move_gen.rs  pgn_parser.rs  pgn_writer.rs  policy_eval.rs  policy_sqlite.rs  ptn_parser.rs  ptn_writer.rs  reverse_move_gen.rs  tei.rs  tinue_search.rs  value_eval.rs
src/aws/: client.rs  mod.rs  server.rs
src/evaluation/: mod.rs  parameters.rs  policy_eval.rs  topaz_eval.rs  value_eval.rs
src/position/: bitboard.rs  color_trait.rs  mod.rs  mv.rs  position_gen.rs  square.rs  utils.rs
src/ptn/: mod.rs  ptn_parser.rs  ptn_writer.rs
src/search/: arena.rs  mcts_core.rs  mcts_core2.rs  mod.rs  tt.rs  wasm.rs
src/tests/: arena_tests.rs  blunder_tests.rs  board_generic_tests.rs  board_tests.rs  komi_policy_tests.rs  mcts_tests.rs  mod.rs  move_gen_5s_tests.rs  move_gen_6s_tests.rs  move_gen_generic_tests.rs  move_gen_tests.rs  policy_tests.rs  position_gen_tests.rs  ptn_tests.rs  tactics_test.rs  tactics_tests_5s.rs  tactics_tests_6s.rs
src/tune/: auto_tune.rs  gradient_descent.rs  mod.rs  openings.rs  pgn_parse.rs  play_match.rs  spsa.rs  training.rs
