[package]
name = "tiltak"
version = "0.1.0"
authors = ["Morten Lohne <lohnemorten@gmail.com>"]
edition = "2018"
repository = "https://github.com/MortenLohne/tiltak/"
readme = "README.md"
license = "GPL-3.0-or-later"
default-run = "main"

[profile.release]
debug = true

[features]
constant-tuning = ["rayon"]
aws-lambda-runtime = ["lambda_runtime", "serde", "serde_json", "arrayvec/serde"]
aws-lambda-client = ["serde", "serde_json", "arrayvec/serde", "rusoto_core", "rusoto_lambda", "bytes", "tokio"]

[[bin]]
name = "bootstrap"
required-features = ["aws-lambda-runtime"]

[[bin]]
name = "tune"
required-features = ["constant-tuning"]

[dependencies]
board-game-traits = "0.2"
pgn-traits = "0.2.2"
arrayvec = "0.7"
rand = "0.8"
rayon = { version = "1.5", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
rusoto_core = { version = "0.46", optional = true }
rusoto_lambda = { version = "0.46", optional = true }
bytes = { version = "1", optional = true }
tokio = { version = "1.7", optional = true }
lambda_runtime = { version = "0.2.1", optional = true }
rand_distr = "0.4"
log = "0.4"
fern = "0.5"
chrono = "0.4"
bufstream = "0.1"
clap = "2.33"
lazy_static = "1.4"