[package]
name = "tiltak"
version = "0.1.0"
authors = ["Morten Lohne <lohnemorten@gmail.com>"]
edition = "2021"
repository = "https://github.com/MortenLohne/tiltak/"
readme = "README.md"
license = "GPL-3.0-or-later"
default-run = "main"

[profile.release]
debug = true
lto = true

[features]
constant-tuning = ["rayon"]
aws-lambda-runtime = ["lambda_runtime", "serde", "serde_json", "arrayvec/serde", "tokio"]
aws-lambda-client = ["serde", "serde_json", "arrayvec/serde", "rusoto_core", "rusoto_lambda", "bytes", "tokio"]
sqlite = ["rusqlite", "rayon"]

[[bin]]
name = "bootstrap"
required-features = ["aws-lambda-runtime"]

[[bin]]
name = "tune"
required-features = ["constant-tuning"]

[dependencies]
board-game-traits = "0.4.0"
pgn-traits = "0.5.0"
arrayvec = "0.7"
rand = "0.8"
rayon = { version = "1.5", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
rusoto_core = { version = "0.47", optional = true }
rusoto_lambda = { version = "0.47", optional = true }
bytes = { version = "1", optional = true }
tokio = { version = "1.7", optional = true }
lambda_runtime = { version = "0.4", optional = true }
rand_distr = "0.4"
log = "0.4"
fern = "0.6"
chrono = "0.4"
bufstream = "0.1"
clap = { version = "4.4", features = ["env"] }
lazy_static = "1.4"
rusqlite = { version = "0.29.0", optional = true, features = ["bundled", "chrono"] }
half = { version = "2.3.1", features = ["num-traits"] }
sysinfo = "0.30.5"
