[package]
name = "tiltak"
version = "0.1.0"
authors = ["Morten Lohne <lohnemorten@gmail.com>"]
edition = "2021"
repository = "https://github.com/MortenLohne/tiltak/"
readme = "README.md"
license = "GPL-3.0-or-later"
default-run = "main"

[profile.release]
debug = true
lto = true

[features]
constant-tuning = ["rayon"]
aws-lambda-runtime = ["lambda_runtime", "serde", "serde_json", "arrayvec/serde", "tokio"]
sqlite = ["rusqlite", "rayon"]

[[bin]]
name = "main"
required-features = []

[[bin]]
name = "tei"
required-features = []

[[bin]]
name = "playtak"
required-features = ["clap", "fern", "bufstream"]

[[bin]]
name = "tune"
required-features = ["constant-tuning", "clap"]

[[bin]]
name = "bootstrap"
required-features = ["aws-lambda-runtime"]

[dependencies]
board-game-traits = "0.4.0"
pgn-traits = "0.5.0"
arrayvec = "0.7"
rand = {version = "0.8", features = ["small_rng"] }
rayon = { version = "1.5", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
tokio = { version = "1.7", optional = true }
lambda_runtime = { version = "0.13", optional = true }
rand_distr = "0.4"
log = "0.4"
fern = { version = "0.7", optional = true }
chrono = "0.4"
bufstream = { version = "0.1", optional = true }
clap = { version = "4.4", features = ["env"], optional = true }
rusqlite = { version = "0.33.0", optional = true, features = ["bundled", "chrono"] }
half = { version = "2.3.1", features = ["num-traits"] }
sysinfo = { version = "0.33.1", default-features = false, features = ["system"] }
num-traits = "0.2.18"
